[package]
name = "rassetfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={version = "0.11.18", features = ['json']}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_tuple = "0.5"
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["derive"] }
